# subscale_latex

./: Ini-paper-example-de.tex  lni-author-template.tex  lni-paper-example-de.bib  lni.cls  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.run.xml  main.tex
vs_project/SUBSCALE_GPU-master/: CMakeLists.txt  README.md  SubscaleGPU.sln
vs_project/SUBSCALE_GPU-master/SubscaleGPU/: Bindings.cpp  CMakeLists.txt  SubscaleGPU.vcxproj  SubscaleGPU.vcxproj.filters  SubscaleTypes.h  config.json  main.cpp  packages.config
vs_project/SUBSCALE_GPU-master/SubscaleGPU/BinomialCoeffCreator/: BinomialCoeffCreator.cu  BinomialCoeffCreator.cuh  BinomialCoeffCreatorMemoryManager.cu  BinomialCoeffCreatorMemoryManager.cuh  DeviceBinomialCoeffCreator.cuh  HostBinomialCoeffCreator.cuh  LocalBinomialCoeffCreator.cuh  UnifiedBinomialCoeffCreator.cuh
vs_project/SUBSCALE_GPU-master/SubscaleGPU/Clustering/: Clustering.cpp  Clustering.h  MultithreadedClustering.cpp  MultithreadedClustering.h
vs_project/SUBSCALE_GPU-master/SubscaleGPU/CoreSetCreator/: CoreSetCreator.cpp  CoreSetCreator.h
vs_project/SUBSCALE_GPU-master/SubscaleGPU/CsvDataHandler/: CsvDataHandler.cpp  CsvDataHandler.h
vs_project/SUBSCALE_GPU-master/SubscaleGPU/DenseUnitCreator/: DenseUnitCreator.cu  DenseUnitCreator.cuh  DenseUnitCreatorSeq.cpp  DenseUnitCreatorSeq.h  DenseUnitKernels.cu  DenseUnitKernels.cuh  IDenseUnitCreator.h
vs_project/SUBSCALE_GPU-master/SubscaleGUI/: Bindings.cs  Form1.Designer.cs  Form1.cs  Program.cs  SubscaleGUI.csproj
(+115 files in other folders)
